--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 
   <body>
 
-    <div class="container position-absolute top-50 start-50 translate-middle" style="width: 30%; display: flex; flex-direction: row; justify-content: center; align-items: center;">
+    <div class="container position-absolute top-50 start-50 translate-middle" style="width: 50%;">
         
-        <button type="button" class="btn btn-primary btn-lg" style="width: 20em; margin-right: 5em;">Staff</button>
-            <a href=staff.html></a>
+        <h2 class="text-center" style="font-weight: bold;">Shmuel Industries®</h2>        
+        <h4 class="text-center" style="margin-bottom: 1em; color: silver;">Benz Victoria 1893</h4>
+        <div class="row">
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg" style="width: 100%;">Staff</button>
+            </div>
 
-        <button type="button" class="btn btn-primary btn-lg" style="width: 20em;">Guest</button>
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg" style="width: 100%;">Guest</button>
+            </div>
+        </div>
+        
 
     </div>
 
